--- a/Web/EuTlWebView/src/main/resources/templates/view - verifyCertificate.html
+++ b/Web/EuTlWebView/src/main/resources/templates/view - verifyCertificate.html
@@ -36,15 +36,9 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="form-floating">
-                        <select class="form-select" id="engineSelect1" name="engine">
-                            <option value="JAVA" selected>Java European Commission Official DSS API</option>
-<!--                            <option value="C++">C++ proprietary implementation with OpenSSL</option>-->
-<!--                            <option value="C#">C# proprietary implementation with OpenSSL</option>-->
-<!--                            <option value="PYTHON">Python proprietary implementation using pyOpenSSL and SignXML-->
-<!--                            </option>-->
-                        </select>
-                        <label class="form-label" for="engineSelect1">Engine: </label>
+                    <div class="">
+                        <label class="form-label" for="datePicker1">Validation time: </label>
+                        <input type="datetime-local" name="valTime" class="form-control" id="datePicker1" th:value="${now}">
                     </div>
                 </div>
             </div>
@@ -73,17 +67,9 @@
                     </div>
                 </div>
                 <div class="row my-3">
-                    <div class="col">
-                        <div class="form-floating">
-                            <select class="form-select" id="engineSelect2" name="engine">
-                                <option value="JAVA" selected>Java European Commission Official DSS API</option>
-<!--                                <option value="C++">C++ proprietary implementation with OpenSSL</option>-->
-<!--                                <option value="C#">C# proprietary implementation with OpenSSL</option>-->
-<!--                                <option value="PYTHON">Python proprietary implementation using pyOpenSSL and SignXML-->
-<!--                                </option>-->
-                            </select>
-                            <label class="form-label" for="engineSelect2">Engine: </label>
-                        </div>
+                    <div class="">
+                        <label class="form-label" for="datePicker2">Validation time: </label>
+                        <input type="datetime-local" name="valTime" class="form-control" id="datePicker2" th:value="${now}">
                     </div>
                 </div>
                 <input type="hidden" name="encoding" value="base64">
